[project]
name = "svelte_pyloid_boilerplate"
version = "0.0.1"
requires-python = ">=3.13,<3.14"
dependencies = ["pyloid>=0.27.2,<0.28"]

[dependency-groups]
dev = [
    "poethepoet>=0.44.0,<0.45",
    "black>=24.10.0,<27",
    "flake8>=7.3.0,<8",
    "pyinstaller>=6.19.0",
    "ruff>=0.15.11",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
dev = "python ./run.py"
build = "python ./build.py"
format = "black ./"
lint = "flake8 ./"
